# websweep

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.txt  aaa.py  classifier.py  make.bat  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: ci.yml  docs.yml  pylint.yml  python-publish.yml
addons/: __init__.py  firmbackbone_extractor.py
corporate_scraper/: README.md  classifier.py  items.py  models.py  pipelines.py  scraper.py  settings.py
corporate_scraper/spiders/: example.py
data/: codebook_overview_urls.txt  test_classifier.tsv
data/performance_data/: 2022-05-05.json  2022-05-09.json  2022-05-11.json  2022-05-12.json  2022-05-13.json
data/results/: 2022-05-13.json
data/tmp_data/: sidn_test.csv  sidn_test_info.csv  sidn_test_info_casper.csv
docs/: DOCUMENTATION.md
docs/scripts/: clean_apidoc.py  sync_featured_notebook.py
docs/source/: conf.py  example_scraper_extractor.ipynb  examples.rst  index.rst  installation.rst  modules.rst  userguide.rst  websweep.consolidator.rst  websweep.crawler.rst  websweep.extractor.rst  websweep.rst  websweep.utils.rst
examples/: example.ipynb  example_extractor_test.ipynb  example_scraper_extractor.ipynb
scraper/: __init__.py  __main__.py  cli.py  config.py  main.py  scraper.py
scripts/benchmark/: analyze_runs.py  finalize_runs.py  run_one_pass_timed.py  run_one_pass_worker.py  run_pair_and_report.sh  source_loader.py  tmp_crawl_test.py
source/: conf.py  contact.rst  index.rst  installation.rst  websweep.rst
source/_templates/: contents.html
src/: classifier.py
src/cpscraper/: __init__.py  __main__.py  config.py  main.py
src/cpscraper/consolidator/: consolidator.py  test_consol.ipynb
src/cpscraper/docs/: conf.py  cpscraper.scraper.rst  index.rst
src/cpscraper/docs/_build/doctrees/: cpscraper.doctree  cpscraper.extractor.doctree  cpscraper.scraper.doctree  cpscraper.utils.doctree  environment.pickle  index.doctree  modules.doctree
src/cpscraper/docs/_build/html/: .buildinfo  cpscraper.extractor.html  cpscraper.html  cpscraper.scraper.html  cpscraper.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/cpscraper/docs/_build/html/_modules/: index.html
src/cpscraper/docs/_build/html/_modules/cpscraper/: config.html  main.html
src/cpscraper/docs/_build/html/_modules/cpscraper/extractor/: extractor.html
src/cpscraper/docs/_build/html/_modules/cpscraper/scraper/: scraper.html
src/cpscraper/docs/_build/html/_modules/cpscraper/utils/: utils.html
src/cpscraper/docs/_build/html/_sources/: cpscraper.extractor.rst.txt  cpscraper.rst.txt  cpscraper.utils.rst.txt  index.rst.txt  modules.rst.txt
src/cpscraper/extractor/: add_host.py  extractor.py
src/cpscraper/scraper/: scraper.py  tmp.py
src/cpscraper/utils/: utils.py
src/info_scraper/: info_scraper.py  main.py
src/scraper/: __init__.py  __main__.py  config.py  main.py  scraper.py
src/scraper/crawler/: scraper.py
src/scraper/extractor/: extractor.py
src/websweep/: __init__.py  __main__.py  config.py  main.py
src/websweep/consolidator/: consolidator.py
src/websweep/crawler/: crawler.py
src/websweep/extractor/: add_host.py  extractor.py  firmbackbone_extractor.py  websweep_extractor.py
src/websweep/scraper/: scraper.py
src/websweep/utils/: backend.py  default_regex.json  json_io.py  public_suffix.py  source_urls.py  utils.py
tests/: __init__.py  test.py  test_config.py  test_consolidator.py  test_cpscraper.py  test_crawler_backends.py  test_crawler_complement.py  test_crawler_duplicate_domains.py  test_crawler_input_normalization.py  test_extractor.py  test_main_backend_selection.py  test_main_crawled_data_guard.py  test_main_extractor_addon_loader.py  test_main_storage_path_guard.py  test_public_suffix.py  test_source_urls.py  test_url_classification.py  units.txt
tests/assets/: aaschroefpalen.nl
