[tool.poetry]
name = "cpscraper"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
cpscraper = "cpscraper.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
tika = "^1.2"
fake-useragent = "^0.1.11"
tldextract = "^3.3.0"
bs4 = "^0.0.1"
pandas = "^1.4.2"
regex = "^2022.6.2"
ftfy = "^6.1.1"
html2text = "^2020.1.16"
jellyfish = "^0.9.0"
moment = "^0.12.1"
peewee = "^3.14.10"
aiohttp = "^3.8.1"
ndjson = "^0.3.1"
multiprocess = "^0.70.13"
Protego = "^0.2.1"
tqdm = "^4.64.1"
functools = "^0.5"
sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
