[tool.poetry]
name = "websweep"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
websweep = "websweep.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
tldextract = "^3.3.0"
bs4 = "^0.0.1"
pandas = "^1.4.2"
ftfy = "^6.1.1"
html2text = "^2020.1.16"
jellyfish = "^0.9.0"
moment = "^0.12.1"
peewee = "^3.14.10"
aiohttp = "^3.8.1"
orjsonl = "^0.2.2"
multiprocess = "^0.70.13"
Protego = "^0.2.1"
tqdm = "^4.64.1"
numpy = "^1.24.2"
lxml = "^4.9.2"
sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
gevent = "^24.2.1"
google-re2 = "^1.1"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
